# nexus

./: .gitignore  LICENSE  README.md
backend/: CMakeLists.txt
backend/src/: main.cpp  main.cpp.save
backend/src/core/: Model.h
backend/src/data/assignment/: cloud_vms.json  defense_missions.json
backend/src/data/inventory/: almacen_central.json
backend/src/data/location/: centros_distribucion.json
backend/src/data/portfolio/: proyectos_inversion.json
backend/src/data/routing/: flota_reparto_urbano.json
backend/src/problems/allocation/: AllocationModel.cpp  AllocationModel.h
backend/src/problems/allocation/instances/: fmcg_supermarket.cpp
backend/src/problems/assignment/: AssignmentModel.cpp  AssignmentModel.h
backend/src/problems/assignment/instances/: cloud_vms.cpp  cloud_vms.h  defense_missions.cpp  defense_missions.h  fmcg_productos_tiendas.cpp  fmcg_productos_tiendas.cpp.save  fmcg_productos_tiendas.h
backend/src/problems/inventory/: InventoryModel.cpp  InventoryModel.h
backend/src/problems/location/: LocationModel.cpp  LocationModel.h
backend/src/problems/portfolio/: PortfolioModel.cpp  PortfolioModel.h
backend/src/problems/routing/: RoutingModel.cpp  RoutingModel.h
backend/src/problems/scheduling/: SchedulingModel.cpp  SchedulingModel.h
backend/src/problems/stochastic/: StochasticModel.cpp  StochasticModel.h
frontend/: index.html  index.html.sin_defensa  script.js  script_v3.js  style.css  style_v2.css
frontend/descriptions/: cloud_vms.html  defense_missions.html  fmcg_productos_tiendas.html
frontend/templates/: cloud_vms.html  defense_missions.html  fmcg_productos_tiendas.html
